--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@ function loadMatches() {
         // Germany
           78, 79,
         // France
-          61, 62, 63
+          61, 62, 63,
+        // Friendlies
+          667
         ]);
-        // add your “Men's club friendlies” ID too
 
       const dates = [getDateKey(-1), getDateKey(0), getDateKey(1)];
       const allMatches = dates.flatMap(d => data[d] || []);
