--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ body{background:var(--bg);color:var(--text)}
 #theme-toggle{position:absolute;top:50%;right:1rem;transform:translateY(-50%);background:var(--btn-bg);color:var(--text);border:1px solid var(--btn-border);border-radius:50%;padding:.5em;cursor:pointer;z-index:1000}
 #theme-toggle:hover{background:var(--btn-selected)}
 .date-bar{display:flex;align-items:center;justify-content:space-between;gap:1rem;background:var(--section-bg);padding:.5rem 0.5rem;width:50%;margin:0 auto;border-radius:8px;margin-bottom:1rem}
+.date-bar button{background:var(--btn-bg);color:var(--text);border:1px solid var(--btn-border);border-radius:50%;width:32px;height:32px;font-size:1rem;cursor:pointer}
+.date-bar button:hover{background:var(--btn-selected);color:#fff}
+#date-label{font-weight:600}
 </style>
 </head>
 <body>
