--- a/index.html
+++ b/index.html
@@ -76,12 +76,34 @@ function applyTheme(t){document.documentElement.classList.toggle('light',t==='li
 // ===== Date navigation =====
 
 const dateLabel=document.getElementById('date-label');
-function updateDateBar(){const names={'-1':'Yesterday','0':'Today','1':'Tomorrow'};dateLabel.textContent=names[currentOffset]|| new Date(new Date().setUTCDate(new Date().getUTCDate()+currentOffset)).toISOString().split('T')[0];}
-document.getElementById('prev-date').addEventListener('click',()=>{currentOffset--;updateDateBar();loadMatches();});
-document.getElementById('next-date').addEventListener('click',()=>{currentOffset++;updateDateBar();loadMatches();});
-updateDateBar();
-
 let currentOffset=0;
+
+function updateDateBar(){
+  const names={'-1':'Yesterday','0':'Today','1':'Tomorrow'};
+  dateLabel.textContent=names[currentOffset]||new Date(new Date().setUTCDate(new Date().getUTCDate()+currentOffset)).toISOString().split('T')[0];
+  loadMatches();
+}
+
+function loadMatches(){
+  fetch('datos.json')
+    .then(r=>r.json())
+    .then(data=>{
+      const date=getDateKey(currentOffset);
+      const allowedLeagueIds=new Set([1,3,4,7,8,9,11,2,3,4,5,8,195,140,141,142,156,39,40,41,42,45,46,135,136,78,79,61,62,63,667]);
+      const matches=(data[date]||[]).filter(m=>allowedLeagueIds.has(m.league.id));
+      const matchesContainer=document.getElementById('matches');
+      matchesContainer.innerHTML='';
+      matches.forEach(match=>{
+        const matchElement=document.createElement('div');
+        matchElement.textContent=`${match.teams.home.name} vs ${match.teams.away.name}`;
+        matchesContainer.appendChild(matchElement);
+      });
+    });
+}
+
+updateDateBar();
+document.getElementById('prev-date').addEventListener('click',()=>{currentOffset--;updateDateBar();});
+document.getElementById('next-date').addEventListener('click',()=>{currentOffset++;updateDateBar();});
 
 function getDateKey(offset){
   const d=new Date();
@@ -89,125 +111,6 @@ function getDateKey(offset){
   return d.toISOString().split('T')[0];
 }
 
-function loadMatches() {
-  fetch('datos.json')
-    .then(r => r.json())
-    .then(data => {
-        const allowedLeagueIds = new Set([
-        // international
-          1, 3, 4, 7, 8, 9, 11,
-        // European club
-          2, 3, 4, 5, 8, 195,
-        // Spain
-          140, 141, 142, 156,
-        // England
-          39, 40, 41, 42, 45, 46,
-        // Italy
-          135, 136,
-        // Germany
-          78, 79,
-        // France
-          61, 62, 63,
-        // Friendlies
-          667
-        ]);
-
-      const dates = [getDateKey(-1), getDateKey(0), getDateKey(1)];
-      const allMatches = dates.flatMap(d => data[d] || []);
-
-      const leagues = {};
-      allMatches.forEach(m => {
-        if (allowedLeagueIds.has(m.league.id)) {
-          const key = m.league.name;
-          if (!leagues[key]) leagues[key] = m.league;
-        }
-      });
-
-      const filtersDiv = document.getElementById('league-filters');
-      filtersDiv.innerHTML = '';
-      Object.values(leagues).forEach(l => {
-        const btn = document.createElement('button');
-        btn.dataset.leagueId = l.id;
-        btn.dataset.league = l.name;
-        btn.className = 'selected';
-        btn.textContent = l.name;
-        btn.addEventListener('click', () => {
-          btn.classList.toggle('selected');
-          loadMatchList();
-        });
-        filtersDiv.appendChild(btn);
-      });
-
-      loadMatchList();
-
-      function loadMatchList() {
-        const date = getDateKey(currentOffset);
-
-        const leagueSet = new Set(Array.from(document.querySelectorAll('#league-filters button.selected')).map(b => b.dataset.league));
-        const matches = (data[date] || []).filter(m => allowedLeagueIds.has(m.league.id));
-        const container = document.getElementById('matches');
-        container.innerHTML = '';
-
-        if (matches.length === 0) {
-          container.innerHTML = '<p>No matches for this day.</p>';
-          return;
-        }
-
-        const grouped = {};
-        matches
-          .filter(m => leagueSet.has(m.league.name))
-          .forEach(m => {
-            const key = m.league.name;
-            if (!grouped[key]) grouped[key] = { league: m.league, matches: [] };
-            grouped[key].matches.push(m);
-          });
-
-        Object.entries(grouped).forEach(([league, group]) => {
-          const groupDiv = document.createElement('div');
-          groupDiv.className = 'competition-group';
-
-          const title = document.createElement('div');
-          title.className = 'competition-title';
-          const flag = group.league.logo || defaultLogo;
-          title.innerHTML = `
-            <div><img src="${m.teams.home.logo || defaultLogo}" onerror="this.src='${defaultLogo}'"> ${league}</div>
-            <span class="arrow">▼</span>
-          `;
-          const table = document.createElement('table');
-          table.className = 'match-table hidden';
-          table.innerHTML = `
-            <tr>
-              <th>Local</th>
-              <th>Hora</th>
-              <th>Visitante</th>
-            </tr>
-          `;
-
-          group.matches.forEach(m => {
-            const row = document.createElement('tr');
-            row.innerHTML = `
-              <td><img src="${m.teams.home.logo || defaultLogo}" onerror="this.src='${defaultLogo}'"> ${m.teams.home.name}</td>
-              <td>${new Date(m.fixture.date).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })}</td>
-              <td><img src="${m.teams.away.logo || defaultLogo}" onerror="this.src='${defaultLogo}'"> ${m.teams.away.name}</td>
-            `;
-            table.appendChild(row);
-          });
-
-          title.addEventListener('click', () => {
-            table.classList.toggle('hidden');
-            const arrow = title.querySelector('.arrow');
-            arrow.classList.toggle('rotate');
-          });
-
-          groupDiv.appendChild(title);
-          groupDiv.appendChild(table);
-          container.appendChild(groupDiv);
-        });
-      }
-    });
-}
-
-    loadMatches();
     </script>
 
 </body>
