--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@ body{background:var(--bg);color:var(--text)}
 .page-header h1{margin:0;font-size:2rem;font-weight:600;color:var(--text);display:inline-block}
 #theme-toggle{position:absolute;top:50%;right:1rem;transform:translateY(-50%);background:var(--btn-bg);color:var(--text);border:1px solid var(--btn-border);border-radius:50%;padding:.5em;cursor:pointer;z-index:1000}
 #theme-toggle:hover{background:var(--btn-selected)}
-.date-bar{display:flex;align-items:center;justify-content:space-between;gap:1rem;background:var(--section-bg);padding:.5rem 0.5rem;width:50%;margin:0 auto;border-radius:8px;margin-bottom:1rem}
+.date-bar{display:flex;align-items:center;justify-content:space-between;gap:1rem;background:var(--section-bg);padding:.5rem 0.5rem;width:75%;margin:0 auto;border-radius:8px;margin-bottom:1rem}
 .date-bar button{background:var(--btn-bg);color:var(--text);border:1px solid var(--btn-border);border-radius:50%;width:32px;height:32px;font-size:1rem;cursor:pointer}
 .date-bar button:hover{background:var(--btn-selected);color:#fff}
 #date-label{font-weight:600}
 </style>
 <style>
   .competition-button {
-    width: 20%;
+    width: 100%;
     background: var(--btn-bg);
     color: var(--text);
     border: 1px solid var(--btn-border);
@@ -50,6 +50,7 @@ body{background:var(--bg);color:var(--text)}
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    box-sizing: border-box;
   }
   .competition-button img {
     width: 24px;
@@ -138,13 +139,14 @@ function loadMatches(){
     .then(r=>r.json())
     .then(data=>{
       const date=getDateKey(currentOffset);
+      const excludedLeagues=new Set(['USL League One','Liga Pro','USL League Two','Major League Soccer','USL Championship','Primera División','Liga MX','Copa Nicaragua','Primera A','Liga MX Femenil','Northern NSW NPL','NNSW League 1']);
       const matches=(data[date]||[]);
       const matchesContainer=document.getElementById('matches');
       const filtersContainer=document.getElementById('league-filters');
       filtersContainer.innerHTML='';
       const leagueSet=new Set();
       matches.forEach(match=>{
-        if(!leagueSet.has(match.league.id)){
+        if(!leagueSet.has(match.league.id)&&!excludedLeagues.has(match.league.name)){
           const btn=document.createElement('button');
           btn.className='competition-button';
           btn.innerHTML=`<img src="${match.league.logo}" onerror="this.src='${defaultLogo}'"> ${match.league.name}`;
